--- a/sonarqube/Jenkinsfile
+++ b/sonarqube/Jenkinsfile
@@ -14,6 +14,7 @@ pipeline {
     stage('build') {
       steps {
         script {
+            sh 'sleep 99999'
             sh 'cd complete && /opt/gradle/bin/gradle build'
           }
         }
